<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearLayoutHorizontalActivity"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="200dp" android:text="@string/lbl_1"
        android:background="#0000ff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="200dp" android:text="@string/lbl_2"
        android:background="#00ff00"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="200dp" android:text="@string/lbl_3"
        android:background="#ff0000"/>
</LinearLayout>