<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearLayoutVerticalActivity"
    android:orientation="vertical"
    android:weightSum="100">
    <TextView
        android:layout_width="match_parent"
        android:layout_weight="50"
        android:layout_height="0dp"
        android:text="@string/lbl_1" android:background="#ff0000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_weight="25"
        android:layout_height="0dp"
        android:text="@string/lbl_2" android:background="#00ff00"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_weight="25"
        android:layout_height="0dp"
        android:text="@string/lbl_3" android:background="#0000ff"/>
</LinearLayout>